[package]
name = "dgraph-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
dgraph-tonic = "0.9"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.16"
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
